Añadiendo mas opciones de ajustes comunicacionales

--- a/index.html
+++ b/index.html
@@ -865,8 +865,310 @@
                                 </label>
                               </div>
                             </div>
+                            <hr class="hr-ajuste">
                           </div>
-                          
+
+                          <div class="col-md-12 mt-3">
+                            <div class="col-md-12 d-flex ps-6">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="checkAjusteCom4">
+                                <label class="form-check-label" for="checkAjusteCom4">
+                                  Ofrecimiento de un espacio de escucha para las inquietudes
+                                </label>
+                              </div>
+                            </div>
+  
+                            <div class="col-md-12 d-flex pt-3 pb-2 justify-content-center">
+                              <h5>Intensidad</h5>
+                            </div>
+  
+                            <div class="col-md-12 d-flex justify-content-evenly">
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom4" id="radioInterCom4">
+                                <label class="form-check-label" for="radioInterCom4">
+                                  Intermitente
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom4" id="radioLimitCom4" >
+                                <label class="form-check-label" for="radioLimitCom4">
+                                  Limitado
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom4" id="radioExtenCom4" >
+                                <label class="form-check-label" for="radioExtenCom4">
+                                  Extenso
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom4" id="radioGenCom4" >
+                                <label class="form-check-label" for="radioGenCom4">
+                                  Generalizado
+                                </label>
+                              </div>
+                            </div>
+                            <hr class="hr-ajuste">
+                          </div>
+
+                          <div class="col-md-12 mt-3">
+                            <div class="col-md-12 d-flex ps-6">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="checkAjusteCom5">
+                                <label class="form-check-label" for="checkAjusteCom5">
+                                  Orientación  sobre las herramientas didácticas y de accesibilidad
+                                </label>
+                              </div>
+                            </div>
+  
+                            <div class="col-md-12 d-flex pt-3 pb-2 justify-content-center">
+                              <h5>Intensidad</h5>
+                            </div>
+  
+                            <div class="col-md-12 d-flex justify-content-evenly">
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom5" id="radioInterCom5">
+                                <label class="form-check-label" for="radioInterCom5">
+                                  Intermitente
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom5" id="radioLimitCom5" >
+                                <label class="form-check-label" for="radioLimitCom5">
+                                  Limitado
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom5" id="radioExtenCom5" >
+                                <label class="form-check-label" for="radioExtenCom5">
+                                  Extenso
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom5" id="radioGenCom5" >
+                                <label class="form-check-label" for="radioGenCom5">
+                                  Generalizado
+                                </label>
+                              </div>
+                            </div>
+                            <hr class="hr-ajuste">
+                          </div>
+
+                          <div class="col-md-12 mt-3">
+                            <div class="col-md-12 d-flex ps-6">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="checkAjusteCom6">
+                                <label class="form-check-label" for="checkAjusteCom6">
+                                  La accesibilidad de las plataformas como apoyo el formato virtual
+                                </label>
+                              </div>
+                            </div>
+  
+                            <div class="col-md-12 d-flex pt-3 pb-2 justify-content-center">
+                              <h5>Intensidad</h5>
+                            </div>
+  
+                            <div class="col-md-12 d-flex justify-content-evenly">
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom6" id="radioInterCom6">
+                                <label class="form-check-label" for="radioInterCom6">
+                                  Intermitente
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom6" id="radioLimitCom6" >
+                                <label class="form-check-label" for="radioLimitCom6">
+                                  Limitado
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom6" id="radioExtenCom6" >
+                                <label class="form-check-label" for="radioExtenCom6">
+                                  Extenso
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom6" id="radioGenCom6" >
+                                <label class="form-check-label" for="radioGenCom6">
+                                  Generalizado
+                                </label>
+                              </div>
+                            </div>
+                            <hr class="hr-ajuste">
+                          </div>
+
+                          <div class="col-md-12 mt-3">
+                            <div class="col-md-12 d-flex ps-6">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="checkAjusteCom7">
+                                <label class="form-check-label" for="checkAjusteCom7">
+                                  Verificar los niveles de accesibilidad de la plataforma educativa que utilice la Universidad
+                                </label>
+                              </div>
+                            </div>
+  
+                            <div class="col-md-12 d-flex pt-3 pb-2 justify-content-center">
+                              <h5>Intensidad</h5>
+                            </div>
+  
+                            <div class="col-md-12 d-flex justify-content-evenly">
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom7" id="radioInterCom7">
+                                <label class="form-check-label" for="radioInterCom7">
+                                  Intermitente
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom7" id="radioLimitCom7" >
+                                <label class="form-check-label" for="radioLimitCom7">
+                                  Limitado
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom7" id="radioExtenCom7" >
+                                <label class="form-check-label" for="radioExtenCom7">
+                                  Extenso
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom7" id="radioGenCom7" >
+                                <label class="form-check-label" for="radioGenCom7">
+                                  Generalizado
+                                </label>
+                              </div>
+                            </div>
+                            <hr class="hr-ajuste">
+                          </div>
+
+                          <div class="col-md-12 mt-3">
+                            <div class="col-md-12 d-flex ps-6">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="checkAjusteCom8">
+                                <label class="form-check-label" for="checkAjusteCom8">
+                                  Incorporar los recursos de accesibilidad que las plataformas utilizan
+                                </label>
+                              </div>
+                            </div>
+  
+                            <div class="col-md-12 d-flex pt-3 pb-2 justify-content-center">
+                              <h5>Intensidad</h5>
+                            </div>
+  
+                            <div class="col-md-12 d-flex justify-content-evenly">
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom8" id="radioInterCom8">
+                                <label class="form-check-label" for="radioInterCom8">
+                                  Intermitente
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom8" id="radioLimitCom8" >
+                                <label class="form-check-label" for="radioLimitCom8">
+                                  Limitado
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom8" id="radioExtenCom8" >
+                                <label class="form-check-label" for="radioExtenCom8">
+                                  Extenso
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom8" id="radioGenCom8" >
+                                <label class="form-check-label" for="radioGenCom8">
+                                  Generalizado
+                                </label>
+                              </div>
+                            </div>
+                            <hr class="hr-ajuste">
+                          </div>
+
+                          <div class="col-md-12 mt-3">
+                            <div class="col-md-12 d-flex ps-6">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="checkAjusteCom9">
+                                <label class="form-check-label" for="checkAjusteCom9">
+                                  Uso de los dispositivos o Apps
+                                </label>
+                              </div>
+                            </div>
+  
+                            <div class="col-md-12 d-flex pt-3 pb-2 justify-content-center">
+                              <h5>Intensidad</h5>
+                            </div>
+  
+                            <div class="col-md-12 d-flex justify-content-evenly">
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom9" id="radioInterCom9">
+                                <label class="form-check-label" for="radioInterCom9">
+                                  Intermitente
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom9" id="radioLimitCom9" >
+                                <label class="form-check-label" for="radioLimitCom9">
+                                  Limitado
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom9" id="radioExtenCom9" >
+                                <label class="form-check-label" for="radioExtenCom9">
+                                  Extenso
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom9" id="radioGenCom9" >
+                                <label class="form-check-label" for="radioGenCom9">
+                                  Generalizado
+                                </label>
+                              </div>
+                            </div>
+                            <hr class="hr-ajuste">
+                          </div>
+
+                          <div class="col-md-12 mt-3">
+                            <div class="col-md-12 d-flex ps-6">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="checkAjusteCom10">
+                                <label class="form-check-label" for="checkAjusteCom10">
+                                  Apuntes de clase –de Voz a Texto–
+                                </label>
+                              </div>
+                            </div>
+  
+                            <div class="col-md-12 d-flex pt-3 pb-2 justify-content-center">
+                              <h5>Intensidad</h5>
+                            </div>
+  
+                            <div class="col-md-12 d-flex justify-content-evenly">
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom10" id="radioInterCom10">
+                                <label class="form-check-label" for="radioInterCom10">
+                                  Intermitente
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom10" id="radioLimitCom10" >
+                                <label class="form-check-label" for="radioLimitCom10">
+                                  Limitado
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom10" id="radioExtenCom10" >
+                                <label class="form-check-label" for="radioExtenCom10">
+                                  Extenso
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="radioCom10" id="radioGenCom10" >
+                                <label class="form-check-label" for="radioGenCom10">
+                                  Generalizado
+                                </label>
+                              </div>
+                            </div>
+                            <!-- hr class="hr-ajuste" -->
+                          </div>
+
                         </div>
                       </div>
                       <div class="modal-footer">
